UtahLiveDataTest/src/objects/IntegrationFormConfig__c.object
<CustomObject>
    <description>[Business] This object is used to Store the Integration Details information</description>
    <fields>
        <fullName>FormConfig__c</fullName>
        <inlineHelpText>Provide Form Configuration</inlineHelpText>
        <label>Form Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>CFG: Integration Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Form Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>